--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "MPA": {
+    "mpa": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -25,9 +25,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/assets/css/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/scripts.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -57,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "MPA:build:production"
+              "buildTarget": "mpa:build:production"
             },
             "development": {
-              "buildTarget": "MPA:build:development"
+              "buildTarget": "mpa:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -68,7 +70,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "MPA:build"
+            "buildTarget": "mpa:build"
           }
         },
         "test": {
@@ -91,5 +93,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "c0d3ecf5-f236-45b0-bbc9-140aebd26a71"
   }
 }
