--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:prod": "ng build --configuration production --base-href /MPA/browser/index"
+    "build:prod": "ng build --configuration production --base-href /MPA/browser"
   },
   "private": true,
   "dependencies": {
